--- a/E_Gov_Platform/src/app/navbar/navbar.component.html
+++ b/E_Gov_Platform/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar1">
-    <ul>
-      <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/about">About Us</a></li>
-      <li><a href="#">Notices</a></li>
-      <li><a href="#">Media</a></li>
-      <li><a href="#">Acts & Rules</a></li>
-      <li><a href="#">Tenders</a></li>
-      <li><a href="#">Schemes</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Documents</a></li>
-      <li><a href="#">Grievance</a></li>
-    </ul> 
-  </nav>
+  <ul>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/about">About Us</a></li>
+    <li><a href="/notices">Notices</a></li>
+    <li><a href="/media">Media</a></li>
+    <li><a href="/act">Acts & Rules</a></li>
+    <li><a href="/tenders">Tenders</a></li>
+    <li><a href="/schemes">Schemes</a></li>
+    <li><a href="/services">Services</a></li>
+    <li><a href="/documents">Documents</a></li>
+    <li><a href="/graviance">Grievance</a></li>
+  </ul> 
+</nav>
